Update to Vapi custom LLM specification with OpenAI integration

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
-# Vapi Configuration
-VAPI_API_KEY=your_vapi_api_key_here
+# OpenAI Configuration (Required for LLM functionality)
+OPENAI_API_KEY=sk-your_openai_api_key_here
 
-# LLM Configuration
-LLM_API_KEY=your_llm_api_key_here
-LLM_MODEL=gpt-3.5-turbo
+# Vapi Configuration (Optional for authentication)
+VAPI_API_KEY=your_vapi_api_key_here
 
 # Server Configuration
 HOST=0.0.0.0
