Add Railway deployment configuration (Dockerfile, Procfile, railway.json)

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ OPENAI_API_KEY=sk-your_openai_api_key_here
 # Vapi Configuration (Optional for authentication)
 VAPI_API_KEY=your_vapi_api_key_here
 
-# Server Configuration
+# Server Configuration (Railway will set PORT automatically)
 HOST=0.0.0.0
 PORT=8000
+
+# Logging
+LOG_LEVEL=info
