Add database support with SQLAlchemy and PostgreSQL/SQLite options

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,12 @@ OPENAI_API_KEY=sk-your_openai_api_key_here
 # Vapi Configuration (Optional for authentication)
 VAPI_API_KEY=your_vapi_api_key_here
 
+# Database Configuration
+# For local development with SQLite: sqlite:///./vapi_custom_llm.db
+# For PostgreSQL: postgresql+psycopg2://user:password@localhost:5432/vapi_db
+# Railway PostgreSQL: Will be auto-injected as DATABASE_URL
+DATABASE_URL=sqlite:///./vapi_custom_llm.db
+
 # Server Configuration (Railway will set PORT automatically)
 HOST=0.0.0.0
 PORT=8000
